[MNG-8558] Switch toolchain support for v4 API